--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -7,5 +7,8 @@ body {
   color: $text-color;
 }
 
+@import 'reset';
+@import 'App';
+@import 'SearchForm';
 @import 'GeocodeResult';
 @import 'Map';
