--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -1,9 +1,9 @@
 $background-color: #eee;
 $text-color: #444;
+$base-margin: 40px;
 
 body {
   background-color: $background-color;
-  text-align: center;
   color: $text-color;
 }
 
